eventgrid/event-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ingress
spec:
  rules:
    # replace IP address below with IP of your ingress controller
    - host: event.20.126.241.122.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: eventgrid
                port: 
                  name: http
